Versión final pretotype@Work
Se redujo tamaño de las imágenes y se modificó información de contactos

--- a/pretotype@work.tex
+++ b/pretotype@work.tex
@@ -809,7 +809,7 @@ Fake door e impersonator son menos pr\'acticos en un contexto B2B.
 \\ \\
 Otra diferencia clave en el entorno B2B es que muchas innovaciones imponen cambios en el proceso por parte del cliente, y los ``costes de adaptaci\'on'' de esos cambios pueden sesgar la receptividad del cliente respecto a la innovaci\'on. Por esta raz\'on, aplicar pretotyping a nuevos procesos puede evitar a menudo confrontaci\'on entre el proveedor y el cliente, cuando la empresa proveedora intenta forzar la innovaci\'on en el cliente.
 \\ \\
-NEGOCIOS CON EL GOBIIERNO (``G2B'') O EL CONTRIBUYENTE (``G2T'')
+NEGOCIOS CON EL GOBIERNO (``G2B'') O EL CONTRIBUYENTE (``G2T'')
 \\ \\
 Organismos del sector p\'ublico p tambi\'en pueden utilizar Pretotype para servicios, desde nuevas pol\'iticas fiscales a la prestaci\'on de servicios financiados por los contribuyentes, como la recolecci\'on de basura. Al igual que en el contexto B2B, un grado de transparencia es recomendable. Los ciudadanos han sido en general entusiastas sobre el uso de las redes sociales, plataformas de crowdsourcing y la idea de hacer participar a votantes y contribuyentes en la labor de formulaci\'on de pol\'iticas. Pretotyping nuevas pol\'iticas, leyes o servicios ser\'ia el siguiente paso en la democracia interactiva.
 \\ \\
@@ -881,9 +881,10 @@ Actualmente Oscar y Rodrigo se encuentran levantando \textit{CyberSyn}, su propi
 Ambos recibieron sus t\'itulos de Ingenieros en las ciencias de la Inform\'atica en la Universidad del Bio-Bio y en la Universidad Cat\'olida de la Sant\'isima Concepci\'on, Regi\'on del Bio-Bio, Chile.
 \\ \\ \\
 Contactos:
-oscar.rubio.ma@gmail.com o visitar www.cybersynforce.com
 \\ \\
-rodrigovaldes@gmail.com o visitar www.cybersynforce.com
+oscar@cybersynforce.com o visitar www.cybersynforce.com
+\\ 
+rodrigo@cybersynforce.com o visitar www.cybersynforce.com
 
 
 \end{document}
